--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.8",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.9.4"
   }
 }
