--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
