Added resume generator

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "static": "next build && next export -o docs && touch ./docs/.nojekyll && echo 'bhaambhu.com' > ./docs/CNAME"
   },
   "dependencies": {
+    "jspdf": "^2.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
