--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.8",
