--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "jspdf": "^2.5.1",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.4.0",
     "tailwind-merge": "^1.8.1"
   },
@@ -22,8 +22,8 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.13",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.4"
