--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/_document.js",
+    "src/pages/_document.js",
     ".next/types/**/*.ts"
   ],
   "exclude": [
